--- a/recipeapp/src/styles/content.css
+++ b/recipeapp/src/styles/content.css
@@ -108,3 +108,19 @@
     justify-content: space-between;
     margin-bottom: 7px;
 }
+@media screen and (max-width:768px){
+    #heading{
+    font-size: 14px;
+    width:100%;
+}
+#display2{
+    
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        /* border:2px solid red; */
+        width:100%;
+        margin-left: 1px;
+    
+}
+}
