--- a/recipeapp/src/styles/content.css
+++ b/recipeapp/src/styles/content.css
@@ -16,6 +16,15 @@
     transform: translateY(10px);
     margin:0;
 }
+#ins{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+}
+#ins button{
+    margin:10px;
+}
 #heading{
     display: flex;
     align-items: center;
