--- a/recipeapp/src/styles/recipes.css
+++ b/recipeapp/src/styles/recipes.css
@@ -120,6 +120,22 @@ flex-wrap: wrap;
 
     @media screen and (max-width:768px){
 
+        #banner1{
+            /* position: absolute; */
+            z-index: 1;
+            opacity: 1;
+            background-image: url('../images/banner3.jpg');
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size:cover;
+            /* border:2px solid blue; */
+            width: inherit;
+            /* display: none; */
+            height:90vh;
+            transform: translateY(10px);
+            margin:0;
+        }
+
          #Servings,#Time,#Diet{
         background-color: blanchedalmond;
         width:10px;
