--- a/recipeapp/src/styles/about.css
+++ b/recipeapp/src/styles/about.css
@@ -27,3 +27,25 @@
     align-items: center;
     justify-content: center;
 }
+#bnr{
+display: none;
+}
+@media screen and (max-width:768px){
+    #bannerabt{
+        z-index: 1;
+        opacity: 1;
+        background-image: none;
+        /* background-image: url('../images/abtpg1.jpg'); */
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size:cover;
+        width: 100%;
+        height:90vh;
+        transform: translateY(10px);
+        margin:0;
+    }
+    
+    #bnr{
+        display: inline;
+    }
+}
