--- a/recipeapp/src/styles/hero.css
+++ b/recipeapp/src/styles/hero.css
@@ -64,3 +64,23 @@ flex-direction:row;
     object-fit: fill;
     border-radius: 55px;
 }
+#bnr{
+    display: none;
+}
+@media screen and (max-width:768px){
+    #banner{
+        z-index: 1;
+        opacity: 1;
+        background-image: none;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size:cover;
+        width: 100%;
+        height:80vh;
+        transform: translateY(10px);
+        margin:0;
+    }
+    #bnr{
+        display: inline;
+    }
+}
