--- a/recipeapp/src/styles/recipes.css
+++ b/recipeapp/src/styles/recipes.css
@@ -65,7 +65,6 @@
     display: flex;
     flex-direction: row;
     height: 30px;
-    /* justify-content: space-around; */
     align-items: center;
     flex-grow: 0.1;
     }
@@ -118,24 +117,29 @@ flex-wrap: wrap;
         display: none;
     }
 
+    #bnr{
+        display: none;
+    }
     @media screen and (max-width:768px){
 
         #banner1{
-            /* position: absolute; */
             z-index: 1;
             opacity: 1;
-            background-image: url('../images/banner3.jpg');
+            background-image: none;
+            /* background-image: url('../images/banner3.jpg'); */
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size:cover;
-            /* border:2px solid blue; */
-            width: inherit;
-            /* display: none; */
+            width: 100%;
             height:90vh;
             transform: translateY(10px);
             margin:0;
         }
-
+#bnr{
+    display: block;
+    width: 100%;
+    height:100%;
+}
          #Servings,#Time,#Diet{
         background-color: blanchedalmond;
         width:10px;
